<resources>
    <string name="app_name">5MPK</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Google_Api_Key">AIzaSyDhydFV8mVx720l3-x5sSvFOQhwfdU_KTw</string>
    <string name="enter_location_coordinates">Enter Location Coordinates</string>
    <string name="enter_destination_coordinates">Enter Destination Coordinates</string>
    <string name="view_route">View Route On Map</string>
    <string name="latitude_decimal">Latitude (decimal)</string>
    <string name="longitude_decimal">Longitude (decimal)</string>
    <string name="get_route">Get Route</string>
    <string name="open">Open</string>
    <string name="required">Required</string>
    <string name="empty_text" />
    <string name="close">CLose</string>
    <string name="bus_name">Bus Name</string>
    <string name="example_ticket_price">10</string>
    <string name="egyptian_pound_sign">E£</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_Confirm_hint">Confirm Password</string>
    <string name="login_email_hint">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="SignIn_title">Already \nhave an \nAccount?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user ? Register Now \t  ></string>
    <string name="use_other_methods">Or Use other Methods</string>
    <string name="default_web_client_id">70611468137-epe6gavq0nb4ims12ah3m7iqo8dq63ji.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="elemntcode">xgft4</string>
    <string name="userimage">UserImage</string>
    <string name="please_enter_phone">Please enter your phone number\n to receive a verification code.</string>
    <string name="verification">Verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="default_total_price">20 E£</string>
    <string name="estimated_total_cost">Estimated Total Cost</string>
    <string name="default_total_trip_time">5 hours, 55 minutes</string>
    <string name="estimated_travel_time">Estimated Travel Time</string>
    <string name="delete_account">Delete Account</string>
    <string name="please_select_destination">Please select destination</string>
    <string name="please_select_start_location">Please select start location</string>
    <string name="our_goal_des">Our goal is to develop an innovative multi-modal transportation solution that optimizes urban mobility, enhancing efficiency, accessibility, and user experience. Through the integration of real-time data, personalized preferences, and advanced algorithms, our aim is to redefine commuting, making it seamless, sustainable, and user-centric. This project strives to address the challenges of modern urban transportation, ultimately transforming the way people navigate cities and improving their daily lives.</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="faq_q1">Why couldn\'t a trip be found?</string>
    <string name="faq_answer1">Well, our algorithm went on a scavenger hunt for a direct trip that doesn\'t require any walking transfers between buses. But alas, it returned empty-handed.</string>
    <string name="faq_q2">How accurate is the cost estimation of the trip?</string>
    <string name="faq_answer2">It\'s as accurate as a dart thrown by a professional darts player for buses and minibuses. But for other modes of transportation like microbuses, it\'s more of a pay-as-you-go system. So, you\'ll have a ballpark figure of the cost, and you might end up paying a tad more or less.</string>
    <string name="faq_q3">How accurate is the trip time estimation?</string>
    <string name="faq_q4">Why do I get one trip and not many options like Google Maps?</string>
    <string name="faq_answer4">Well, this was a conscious choice. Apps like Google Maps might give you multiple options, but let\'s be honest, the top one is usually the best. It\'s like being at a buffet but always choosing the first dish. So, with 5MPK, we decided to serve you the best option based on time, distance, cost, and least transfers. We\'ve done the thinking, so you can focus on more important stuff, like what will you eat today.</string>
    <string name="faq_q5">Why doesn\'t the offline mode include a map?</string>
    <string name="faq_answer5">To include a usable map of the Greater Cairo Area for offline mode would make the app size balloon to over 3 GIGABYTES. That\'s like trying to fit an elephant in a mini-fridge! So, we decided to skip the map.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq_answer3">The trip time is calculated considering a whole bunch of factors like congestion, road conditions, the length of the trip, and the anticipated wait time for the next bus. So, we try to give you the most probable time, kind of like predicting the weather.</string>
    <string name="about_us">About US</string>
    <string name="our_goal">Our Goal</string>
    <string name="our_team">Our Team</string>
    <string name="kerolos_atef">Kerolos Atef</string>
    <string name="_202000150">202000150</string>
    <string name="mustafa_hamdy">Mustafa Hamdy</string>
    <string name="_202000053">202000053</string>
    <string name="mark_joseph">Mark Joseph</string>
    <string name="_202000225">202000225</string>
    <string name="motaz_ismail">Motaz Ismail</string>
    <string name="_202000544">202000544</string>
    <string name="markos_youssef">Markos Youssef</string>
    <string name="_202000206">202000206</string>
    <string name="marwan_moustafa">Marwan Moustafa</string>
    <string name="_202000655">202000655</string>
    <string name="paula_mikhail">Paula Mikhail</string>
    <string name="_202000779">202000779</string>
    <string name="lets_change_your_password">Lets Change \nYour Password</string>
    <string name="please_confirm_your_email_to_nsend_you_the_reset_link">Please Confirm Your Email to \nSend you the reset Link</string>
    <string name="todo">TODO</string>
    <string name="send">Send</string>
    <string name="geting_started">Geting Started</string>
    <string name="forgot_password_no_worries">Forgot Password \nNo Worries</string>
    <string name="please_provide_your_account_email_which_you_want_to_reset">Please Provide Your Account\'s Email \n Which You want to Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="offline_mode">OFFLINE MODE</string>
    <string name="_5mpk_privacy_policy">5MPK Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="privacy">Privacy</string>
    <string name="here_s_your_first_nstep_with_us">Here’s your first\nstep with us!</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="we_just_need_location_permission_to_start_please_accept_the_dialoge_that_will_appaear_now">We just need location Permission to start Please accept the dialoge that will appaear now</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="user_name">User Name</string>
    <string name="no_one_everyone_gmail_com">NoOne.Everyone@gmail.com</string>
    <string name="default_bus_station_hamada_helal">Default Bus Station Hamada Helal</string>
    <string name="home">Home</string>
    <string name="share_our_app">Share Our App</string>
    <string name="f_a_q">FAQ</string>
    <string name="account">Account</string>
    <string name="logout">logout</string>
</resources>