<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >

        <item
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"
            android:id="@+id/test1"
            android:checked="true"
            android:background="@drawable/nav_drawer_item_background"
            />
        <item
            android:checkable="false"
            android:title="@string/share_our_app"
            android:id="@+id/sharebtn"
            android:icon="@drawable/icons8_reply_arrow"
            android:background="@drawable/nav_drawer_item_background"
            />

        <item
            android:checkable="false"
            android:icon="@drawable/baseline_question_answer_24"
            android:title="@string/f_a_q"
            android:id="@+id/faq"
            android:background="@drawable/nav_drawer_item_background"
            />


    </group>

    <item
        android:title="@string/account"
        >
        <menu>
            <item
                android:title="@string/settings"
                android:id="@+id/Settings"
                android:icon="@drawable/baseline_settings_24"

                />
            <item
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"
                android:id="@+id/logout">

            </item>
        </menu>
    </item>


</menu>