<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:background="?attr/colorOnPrimary"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="?attr/colorPrimary"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:text="@string/SignIn_title"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/blob_signin"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/login_email_hint"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot_pass"
                style="@style/viewParent"
                android:text="@string/forgot_password"
                android:textSize="@dimen/newsMoreTextSize"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"/>

            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:initialCornerAngle="27dp"
                app:spinning_bar_padding="6dp"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary"
                    android:layout_weight="3"/>

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_other_methods"
                    android:layout_weight="6"
                    android:textSize="12sp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary"
                    android:layout_weight="3"/>

            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorOnPrimary"
                app:cardCornerRadius="20dp"
                android:padding="10dp"
                app:cardElevation="5dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                >
                <LinearLayout
                    android:id="@+id/signinwithgoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">
                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/ic_google"
                           android:layout_marginStart="10dp"
                           android:contentDescription="@string/app_name" />
                       <TextView
                           android:textColor="?attr/colorPrimary"
                           android:padding="10dp"
                           android:textStyle="bold"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/sign_in_with_google"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:textSize="17sp"
        android:layout_centerInParent="true"
        android:text="@string/new_user_register_now"
        android:layout_marginTop="@dimen/loginViewsMargin"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/add_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/todo" />
</RelativeLayout>