<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FAQActivity">
    <TextView
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq"
        android:textSize="22sp"
        android:padding="20dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/colorPrimary"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geting_started"
                android:textSize="18sp"
                android:layout_margin="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_marginTop="10dp"
                    android:layout_gravity="top"
                    android:id="@+id/q1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />
                <LinearLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="?attr/colorSecondary"
                        android:text="@string/faq_q1"
                        />
                    <TextView
                        android:textColor="?attr/colorOnSurfaceVariant"
                        android:id="@+id/answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer1"
                        android:textSize="14sp"
                        android:visibility="gone"
                        />


                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_marginTop="10dp"
                    android:layout_gravity="top"
                    android:id="@+id/q2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />
                <LinearLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="16sp"
                        android:textColor="?attr/colorSecondary"
                        android:text="@string/faq_q2"
                        />
                    <TextView
                        android:textColor="?attr/colorOnSurfaceVariant"
                        android:id="@+id/answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer2"
                        android:textSize="14sp"
                        android:visibility="gone"
                        />


                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_marginTop="10dp"
                    android:layout_gravity="top"
                    android:id="@+id/q3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />
                <LinearLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="?attr/colorSecondary"
                        android:text="@string/faq_q3"
                        />
                    <TextView
                        android:textColor="?attr/colorOnSurfaceVariant"
                        android:id="@+id/answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer3"
                        android:textSize="14sp"
                        android:visibility="gone"
                        />


                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_marginTop="10dp"
                    android:layout_gravity="top"
                    android:id="@+id/q4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />
                <LinearLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="16sp"
                        android:textColor="?attr/colorSecondary"
                        android:text="@string/faq_q4"
                        />
                    <TextView
                        android:textColor="?attr/colorOnSurfaceVariant"
                        android:id="@+id/answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer4"
                        android:textSize="14sp"
                        android:visibility="gone"
                        />


                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_marginTop="10dp"
                    android:layout_gravity="top"
                    android:id="@+id/q5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />
                <LinearLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="16sp"
                        android:textColor="?attr/colorSecondary"
                        android:text="@string/faq_q5"
                        />
                    <TextView
                        android:textColor="?attr/colorOnSurfaceVariant"
                        android:id="@+id/answer5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_answer5"
                        android:textSize="14sp"
                        android:visibility="gone"
                        />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>