<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPassActivity"
    android:background="?attr/colorOnPrimary"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_marginTop="40dp"
        android:isScrollContainer="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">
            <TextView
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                style="@style/viewParent.headerText.NoMode"
                android:textColor="?attr/colorPrimary"
                android:text="@string/lets_change_your_password"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reset_password_bro"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/todo" />
        </RelativeLayout>


        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_confirm_your_email_to_nsend_you_the_reset_link"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                />

            <com.google.android.material.textfield.TextInputLayout
                app:helperText=""
                app:helperTextTextColor="@android:color/holo_red_light"
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="?attr/colorPrimary"
                    android:hint="@string/login_email_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/Reset_btn"
                style="@style/loginButton"
                android:textColor="?attr/colorOnPrimary"
                android:backgroundTint="?attr/colorPrimary"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                android:text="@string/send"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:initialCornerAngle="27dp"
                app:spinning_bar_padding="6dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>




    </LinearLayout>


</RelativeLayout>